# nitsi

./: .gitignore  Makefile.am  centos2-snapshot.xml  centos2.xml  configure.ac  disk.py  machine.py  network.py  nitsi  nitsi.in  qcow2-copy.sh  recipe.py  serial_connection.py  test.py  test2.py  virtual_environ.py
examples/test/: recipe  settings
examples/test2/: recipe
examples/test3/: recipe  settings
examples/virtual-environment/basic/machines/alice/: machine.xml  snapshot.xml
examples/virtual-environment/basic/machines/bob/: machine.xml
examples/virtual-environment/basic/network/network1/: network.xml
examples/virtual-environment/basic/network/network2/: network.xml
man/: nitsi.recipe.xml  nitsi.settings.xml  nitsi.xml
src/nitsi/: cmd.py  disk.py  logger.py  machine.py  network.py  recipe.py  serial_connection.py  settings.py  test.py  virtual_environ.py
test/: recipe
virtual-environment/basic/: settings
virtual-environment/basic/machines/bob/: snapshot.xml
